# deconz-rest-plugin

./: .gitignore  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  air_quality.cpp  air_quality.h  alarm_system.cpp  alarm_system.h  alarm_system_device_table.cpp  alarm_system_device_table.h  alarm_system_event_handler.cpp  alarm_system_event_handler.h  appliances.cpp  aps_controller_wrapper.cpp  aps_controller_wrapper.h  atmel_wsndemo_sensor.cpp  authentification.cpp  authorisation.cpp  backup.cpp  backup.h  basic.cpp  bindings.cpp  bindings.h  build-macos.sh  button_maps.cpp  button_maps.h  button_maps.json  button_maps.schema.json  button_maps2.json  change_channel.cpp  cloc_device.sh  colorspace.cpp  colorspace.h  connectivity.cpp  connectivity.h  database.cpp  database.h  (+147 more)
.github/: issue-close-app.yml  release-drafter-config.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  device-request.md  device_request.yml  feature_request.md  user-question.md
.github/workflows/: build_amd64.yml  build_arm64.yml  build_armhf.yml  ci-ddf-bundles.yml  ci-ddf-store.yml  compile-rest-plugin.yml  interactions-dispatcher.yml  release-drafter.yml  staleAction.yml  verify-button-maps.yml  verify-ddf-json.yml
cj/: cj.c  cj.h  cj_all.c
cj/extra/: cj_copy_ref_utf8.c  cj_ref_to_boolean.c  cj_ref_to_double.c  cj_ref_to_long.c  cj_ref_to_null.c
crypto/: mmohash.cpp  mmohash.h  password.cpp  password.h  random.cpp  random.h  scrypt.cpp  scrypt.h
device/: CMakeLists.txt
device_js/: CMakeLists.txt  device_js.cpp  device_js.h  device_js_duktape.cpp  device_js_duktape.h  device_js_wrappers.cpp  device_js_wrappers.h
devices/: _TYZB01_SM0201_temp_hum_sensor.json  _TZE200_2wg5qrjy_valve.json  _TZE200_TS0601_humidity_temp.json  bseed_3gang.json  bseed_dimmer  light_zb3_C.json  tradfri_bulb_e27_ww_806lm.json
devices/3A-Nue/: LXT56-LS27LX1.7.json  Lxn59-2s7lX1.0.json  lxn59-1s7lx1.0.json  lxt56-ls27lx1.7.json
devices/CTM/: air_sensor.json  ax_valve_controller.json  ax_water_sensor.json  bryter.json  ctm_battery.js  ctm_mode.js  mbd-s.json  mikrofon.json  mkomfy.json  mstikk_outlet.json  mtouch_one.json
devices/Jasco-GE/: GE45856_wall_switch.json  dimmable_light_43080.json  onoff_light_43076.json  onoff_light_43100.json  onoff_light_43102.json
devices/_TZ3040_6ygjfyll/: TS0202.json
devices/adeo/: ldsenk02f_plug.json  ldsenk08_door_vibration_sensor.json  ldsenk09_keyfob.json  ledsenk08_door_vibration_sensor.json
devices/aeotec/: WG001-Z01_range_extender.json  water_sensor.json
devices/arteco/: ZS-304Z_temp_hum_light_moist_sensor.json
devices/aubess/: aubess_multi_sensor_TZ2000_a476raq2.json  aubess_multi_sensor_TZ3000_bguser20.json  aubess_muti_sensor_TZ3000_bguser20  aubess_plug_TZ3000_hdopuwv6.json
devices/b-parasite/: 0400_lightlevel.js  b-parasite.json
devices/blitzwolf/: bw_is4_multisensor.json  bw_shp13_smart_plug.json  bw_shp15_smart_plug.json
devices/bosch/: bmct-slz_shutter_light_control2.json  bsd-2-smoke-alarm.json  bwa-1_water_sensor.json  plug_compact.json  rfdl-zb-ms_motion_sensor.json  room_thermostat2.json  room_thermostat2_230V.json  thermostat2.json  thermostat2_230.json
devices/centralite/: motion_sensor-a.json
devices/computime-salus/: computime_battery.js  ss909zb_temp_sensor.json
devices/danalock/: danalock_v3.json
devices/danfoss/: ally_temp_hum_sensor.json  danfoss_errorcode.js  danfoss_windowopen_state.js  etrv0100_thermostat.json
devices/datek/: id_lock_150.json  lockstatus.js
devices/develco/: aqszb-110_voc_sensor.json  emizb-141_electricity_meter_interface_2.json  heszb-120_heat_detector.json  hmszb-110_temp_hum_sensor.json  hmszb_temp_hum_sensor.json  iomzb-110_switch_module.json  moszb-140_motion_sensor.json  moszb-141_motion_sensor.json  smszb-120_smoke_detector.json  splzb-131_smart_plug.json  wiszb-120_open_close_sensor.json  wiszb-121_open_close_sensor.json  zhemi101_external_meter_interface.json
devices/dresden_elektronik/: fls-ct.json  fls_pp3.json  hive.json  kobold.json  lighting_switch.json  lighting_switch_bri.js  lighting_switch_ct.js  lighting_switch_on.js  lighting_switch_scenes.js  scene_switch.json  scene_switch_bri.js  scene_switch_on.js  scene_switch_scenes.js
devices/easyaccess/: easyfingertouch_doorlock.json
devices/elko/: thermostat_16_a.json
devices/eurotronic/: eurotronic_spzb0001_trv.json
devices/eva/: powermeter.json
devices/fantem/: zb003-x_multi_sensor.json
devices/fireangel/: 0001_battery_voltage.js  0019_swversion.js  co_alarm.json  generic_alarm.json  smoke_alarm.json
devices/frient/: aqszb-110_voc_sensor.json  develco_battery.js  develco_firmware.js  emizb-141_electricity_meter_interface_2.json  heszb-120_heat_detector.json  hmszb-110_temp_hum_sensor.json  hmszb_temp_hum_sensor.json  kepzb-110_keypad.json  moszb-140_motion_sensor.json  moszb-153_motion_sensor.json  moszb-154_motion_sensor.json  sirzb-111_siren.json  smszb-120_smoke_detector.json  splzb-131_smart_plug.json  wiszb-120_open_close_sensor.json  wiszb-121_open_close_sensor.json
devices/generic/: constants.json
devices/gledopto/: GL-DR-001Z.json  floodlight.json  gl-sd-002_switch.json  (+1 more)
dockerfiles/: amd64  arm64  armhf
resource/: CMakeLists.txt
sqlite3/: CMakeLists.txt
tests/: 001-device-1.cpp  101-resourceitem-dt-time.cpp  201-device-js.cpp  301-utils-mappedval.cpp  302-http-header.cpp  303-timeref.cpp  CMakeLists.txt
ui/: ddf_bindingeditor.cpp  ddf_bindingeditor.h  ddf_editor.cpp  ddf_editor.h  ddf_editor.ui  ddf_itemeditor.cpp  ddf_itemeditor.h  ddf_itemlist.cpp  ddf_itemlist.h  ddf_treeview.cpp  ddf_treeview.h  device_widget.cpp  device_widget.h  device_widget.ui  text_lineedit.cpp  text_lineedit.h
utils/: ArduinoJson-v6.18.3.h  ArduinoJson-v6.19.4.h  ArduinoJson.h  CMakeLists.txt  bufstring.cpp  bufstring.h  rstring.cpp  rstring.h  scratchmem.cpp  scratchmem.h  stringcache.cpp  stringcache.h  timecluster.cpp  timecluster.h  utils.cpp  utils.h
zcl/: CMakeLists.txt  zcl.cpp  zcl.h
zdp/: CMakeLists.txt  zdp.cpp  zdp.h  zdp_handlers.cpp  zdp_handlers.h
(+1062 files in other folders)
